# IS213-Education-Helper

./: .gitignore  Makefile  README.md  commitlint.config.js  gemfile  package-lock.json  package.json
.bundle/: config
.husky/: pre-commit
authentication/: .env  .eslintignore  .eslintrc.cjs  .prettierignore  Dockerfile  README.md  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/simple/subscriptions/: .env  CMakeLists.txt  Dockerfile  Subscriptions.Dockerfile  buf.gen.yaml  buf.yaml  server.cpp
backend/simple/subscriptions/include/: database.h  dotenv.h  utils.h
backend/simple/subscriptions/pb/: subscriptions.grpc.pb.cc  subscriptions.grpc.pb.h  subscriptions.pb.cc  subscriptions.pb.h
backend/simple/subscriptions/proto-services/: subscriptions.cpp
backend/simple/subscriptions/protos/: subscriptions.proto
backend/simple/subscriptions/src/: server.cpp
backend/simple/subscriptions/src/database/: database.cpp
backend/simple/subscriptions/src/proto-services/: health.cpp  subscriptions.cpp
backend/simple/subscriptions/src/utils/: utils.cpp
client/: .env  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.paths.json  vite.config.ts
docs/: AuthenticationGoogleSequence.md  AuthenticationLogoutSequence.md  AuthenticationRefreshSequence.md  KongAuthenticationPluginSequence.md  Makefile.md  contents.swagger.json  handle_temporary_contents.swagger.json  make_payment.swagger.json  save_notes.swagger.json  user_storage.swagger.json  (+1 more)
(+641 files in other folders)
